<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="24dp"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="24dp"
    android:paddingBottom="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/task_name1"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            android:fontFamily="@font/inter_bold"/>

        <TextView
            android:id="@+id/task_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_reward"
            tools:text="@string/task_reward1"
            android:textColor="@color/boulder"
            android:layout_below="@id/task_title"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/task_reward"
            android:layout_marginTop="18dp"
            android:background="@color/boulder"/>

        <TextView
            android:id="@+id/task_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_type"
            tools:text="@string/task_type1"
            android:layout_below="@id/task_title"
            android:layout_marginTop="8dp"
            android:textColor="@color/boulder"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/task_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_deadline"
            android:textColor="@color/boulder"
            tools:text="@string/task_deadline1"
            android:layout_alignParentStart="true"
            android:layout_below="@id/divider"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>