<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.auth.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="108dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RegisterText"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/registerDesc"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/baseline_person_24"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NameInputLayout"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/baseline_email_24"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EmailInputLayout"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/PasswordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/registerbtntext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/login_text_button"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>